# neuroacoustic-resonator

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Justfile  LICENSE  README.md  flake.nix  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
configs/: audio_demo.yaml  default.yaml  field_only.yaml  long_run.yaml  responsive_audio.yaml  synthetic_input.yaml
experiments/: README.md
experiments/audio/: README.md
neuroacoustic_resonator/: __init__.py  field.py
nix/: shell.nix
outputs/: README.md
scripts/: benchmark_field.py  detect_turns.py  export_diagnostics.py  extract_audio_input.py  live_field.py  play_audio_demo.py  probe_propagation.py  probe_voice_memory.py  probe_voice_response.py  render_audio_demo.py  resume_checkpoint.py  run_audio_input.py  run_conversation.py  run_experiments.py  run_live_conversation.py  run_long_metrics.py  run_pattern_calibration.py  save_checkpoint.py
tests/: test_audio_input.py  test_audio_input_run.py  test_audio_output.py  test_audio_render.py  test_benchmark_field_script.py  test_config.py  test_conversation.py  test_conversation_presets.py  test_diagnostics_export.py  test_experiment_analysis.py  test_field.py  test_input_drive.py  test_live_conversation.py  test_long_metrics_script.py  test_metrics.py  test_output_patterns.py  test_pattern_calibration.py  test_pattern_plasticity.py  test_persistence.py  test_preview.py  test_propagation_probe.py  test_realtime_audio.py  test_regions.py  test_reinforcement.py  test_resume_checkpoint.py  test_simulation.py  test_turn_detection.py  test_visualization.py  test_voice_memory_probe.py  test_voice_probe.py
(+57 files in other folders)
