[project]
name = "neuroacoustic-resonator"
version = "0.1.0"
description = "Self-organizing neuroacoustic system that transforms live sound into evolving oscillator-field dynamics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numba>=0.65.1",
    "numpy>=2.4.4",
    "pydantic>=2.13.4",
    "pyqtgraph>=0.14.0",
    "pyside6>=6.11.0",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.hatch.build.targets.wheel]
packages = ["src/neuroacoustic_resonator"]
